--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "firebaseui": "^4.7.1",
     "handlebars": "^4.7.6",
     "material-design-icon-fonts": "^3.0.1",
-    "material-design-icons": "^3.0.1"
+    "material-design-icons": "^3.0.1",
+    "sass": "^1.32.5"
   }
 }
