--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "webpackbar": "^4.0.0"
   },
   "dependencies": {
+    "basiclightbox": "^5.0.4",
     "core-js": "^3.6.5",
     "firebase": "^8.2.3",
     "firebaseui": "^4.7.1",
