--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "handlebars": "^4.7.6",
     "material-design-icon-fonts": "^3.0.1",
     "material-design-icons": "^3.0.1",
-    "sass": "^1.32.5"
+    "sass": "^1.32.5",
+    "tui-pagination": "^3.4.0"
   }
 }
