--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-syntax-jsx": "^7.12.1",
     "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.12.10",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -51,6 +53,7 @@
   },
   "dependencies": {
     "basiclightbox": "^5.0.4",
+    "choices.js": "^7.0.0",
     "core-js": "^3.6.5",
     "firebase": "^8.2.3",
     "firebaseui": "^4.7.1",
