--- a/package.json
+++ b/package.json
@@ -53,13 +53,13 @@
   },
   "dependencies": {
     "basiclightbox": "^5.0.4",
-    "choices.js": "^7.0.0",
     "core-js": "^3.6.5",
     "firebase": "^8.2.3",
     "firebaseui": "^4.7.1",
     "handlebars": "^4.7.6",
     "material-design-icon-fonts": "^3.0.1",
     "material-design-icons": "^3.0.1",
+    "pnotify": "^5.2.0",
     "sass": "^1.32.5",
     "tui-pagination": "^3.4.0"
   }
